<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        android:menuCategory="secondary"/>

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar_black_24dp"
        android:title="@string/title_calendar"
        android:menuCategory="secondary"/>

    <item
        android:id="@+id/navigation_pick"
        android:icon="@drawable/ic_camera_black_24dp"
        android:title="@string/title_pick"
        android:menuCategory="secondary"/>
    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_user_black_24dp"
        android:title="@string/title_user"
        android:menuCategory="secondary"/>

</menu>