<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="10">

    <TextView
        android:id="@+id/text_start"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fontFamily="@font/noto_sans_bold"
        android:gravity="center"
        android:text="@string/title_start"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="4"
        app:srcCompat="@drawable/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/text_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/login_description"
            android:textSize="20sp"
            android:textStyle="bold" />
        <!--구글 버튼-->
        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_google"
            android:layout_width="325dp"
            android:layout_height="75dp"
            android:layout_marginBottom="20dp" />
        <!--카카오 버튼-->
        <LinearLayout
            android:id="@+id/btn_kakao"
            android:layout_width="320dp"
            android:layout_height="70dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:weightSum="100"
            android:background="@drawable/kakao_round_edge">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15"
                android:gravity="center"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/kakao_symbol" />
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="85"
                android:text="@string/login_kakao"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"/>
        </LinearLayout>
        <!--네이버 버튼-->
        <LinearLayout
            android:id="@+id/btn_naver"
            android:layout_width="320dp"
            android:layout_height="70dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:weightSum="100"
            android:background="@drawable/naver_round_edge">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15"
                android:gravity="center"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/naver_symbol" />
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="85"
                android:text="@string/login_naver"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>